--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ python:
   - "3.5"
   - "3.5-dev"
   - "nightly"
-install: "pip install -r requirements.txt"
+install: "pip install -r requirements.txt -r requirements-dev.txt"
 script: py.test
 
