--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -13,6 +13,8 @@ serialize = {major}.{minor}
 
 [bumpversion:file:nrewebservices/__release__.py]
 
+[bumpversion:file:setup.py]
+
 [bumpversion:part:release]
 optional_value = gamma
 values = 
