Add CHANGELOG.md to bumpversion config.

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -12,8 +12,8 @@ serialize =
 serialize = {major}.{minor}
 
 [bumpversion:file:nrewebservices/__release__.py]
-
 [bumpversion:file:setup.py]
+[bumpversion:file:CHANGELOG.md]
 
 [bumpversion:part:release]
 optional_value = gamma
