--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,7 +1,7 @@
 [bumpversion]
 commit = True
 tag = True
-current_version = 0.1.1-dev
+current_version = 0.1.1
 parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+))?
 serialize = 
 	{major}.{minor}.{patch}-{release}
@@ -11,7 +11,9 @@ serialize =
 serialize = {major}.{minor}
 
 [bumpversion:file:nrewebservices/__release__.py]
+
 [bumpversion:file:setup.py]
+
 [bumpversion:file:CHANGELOG.md]
 
 [bumpversion:part:release]
