Update changelog file name for bumpversion.

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -14,7 +14,7 @@ serialize = {major}.{minor}
 
 [bumpversion:file:setup.py]
 
-[bumpversion:file:CHANGELOG.md]
+[bumpversion:file:CHANGELOG.rst]
 
 [bumpversion:part:release]
 optional_value = gamma
